--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,8 @@
-add_executable(SykeroLabs "Main.cpp")
+add_executable(sykerolabs "Main.cpp")
 
-target_link_libraries(SykeroLabs pico_stdlib)
+pico_enable_stdio_usb(sykerolabs 1)
+pico_enable_stdio_uart(sykerolabs 0)
 
-pico_enable_stdio_usb(SykeroLabs 1)
-pico_enable_stdio_uart(SykeroLabs 0)
+target_link_libraries(sykerolabs pico_stdlib hardware_pwm)
 
-pico_add_extra_outputs(SykeroLabs)
+pico_add_extra_outputs(sykerolabs)
